force-app/main/default/objects/Compte_rendu_activit__c/Compte_rendu_activit__c.object-meta.xml
<CustomObject>
    <label>Compte rendu activité</label>
    <nameField>
        <label>Compte rendu activité Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comptes rendu activité</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>