force-app/main/default/objects/Compte_rendu_activit__c/fields/Annee__c.field-meta.xml
<CustomField>
    <fullName>Annee__c</fullName>
    <formula>YEAR(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Année</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>