force-app/main/default/objects/Compte_rendu_activit__c/fields/date_de_fin__c.field-meta.xml
<CustomField>
    <fullName>date_de_fin__c</fullName>
    <label>date de fin</label>
    <type>Date</type>
</CustomField>