force-app/main/default/objects/Compte_rendu_activit__c/fields/date_ouverture__c.field-meta.xml
<CustomField>
    <fullName>date_ouverture__c</fullName>
    <label>date ouverture</label>
    <type>Date</type>
</CustomField>