force-app/main/default/objects/Compte_rendu_activit__c/fields/Sum_values__c.field-meta.xml
<CustomField>
    <fullName>Sum_values__c</fullName>
    <label>Nombre de jours travaillés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>