force-app/main/default/objects/Compte_rendu_activit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Sum_values__c</columns>
    <columns>Mois__c</columns>
    <columns>Annee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>